--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 						<li><a href="#js">JS</a></li>
 						<li><a href="#bootstrap">BootStrap</a></li>
 						<li><a href="#figma">Figma</a></li>
+						<li><a href="#github">GitHub</a></li>
 					</ul>
 
 					<a href="#rewiews">Далі: Відгуки</a>
