--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 								class="label">Telegram</span></a></li>
 					<li><a href="https://youtube.com/@DimaHumenyuk_it" class="icon brands fa-youtube"><span
 								class="label">YouTube</span></a></li>
-					<li><a href="https://x.com/DimaHumenyuk_it" class="icon brands fa-github"><span
+					<li><a href="https://x.com/DimaHumenyuk_it" class="icon brands fa-x"><span
 								class="label">X</span></a></li>
 					<li><a href="https://github.com/dimahumenyuk2012" class="icon brands fa-github"><span
 								class="label">GitHub</span></a></li>
