--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			</article>
 
 			<article id="work">
-				<h3>
+				<h3>Тех.Навички</h3>
 					<ul>
 						<li><a href="#html">HTML + CSS</a></li>
 						<li><a href="#js">JS</a></li>
@@ -101,8 +101,8 @@
 								class="label">Telegram</span></a></li>
 					<li><a href="https://youtube.com/@DimaHumenyuk_it" class="icon brands fa-youtube"><span
 								class="label">YouTube</span></a></li>
-					<li><a href="https://x.com/DimaHumenyuk_it" class="icon brands fa-x"><span
-								class="label">X</span></a></li>
+					<li><a href="https://x.com/DimaHumenyuk_it" class="icon brands fa-twitter"><span
+								class="label">Twitter</span></a></li>
 					<li><a href="https://github.com/dimahumenyuk2012" class="icon brands fa-github"><span
 								class="label">GitHub</span></a></li>
 				</ul>
