--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
 								class="label">YouTube</span></a></li>
 					<li><a href="https://x.com/DimaHumenyuk_it" class="icon brands fa-twitter"><span
 								class="label">Twitter</span></a></li>
+	                                <li><a href="https://www.facebook.com/profile.php?id=61562683131427" class="icon brands fa-facebook"><span
+								class="label">FaceBook</span></a></li>	
+					<li><a href="https://www.instagram.com/d.i.m.a_h.u.m.e.n.y.u.k/" class="icon brands fa-instagram"><span
+								class="label">Instagram</span></a></li>	
 					<li><a href="https://github.com/dimahumenyuk2012" class="icon brands fa-github"><span
 								class="label">GitHub</span></a></li>
 				</ul>
